# cornucopi

./: .gitignore  README.md  release-plz.toml
.github/workflows/: ci.yaml
benches/: Cargo.toml  codegen.rs
benches/execution/: main.rs  tokio_postgres_benches.rs
benches/execution/cornucopi_benches/: generated.rs
crates/client_async/: CHANGELOG.md  Cargo.toml  README.md
crates/client_async/src/: lib.rs  private.rs
crates/client_core/: CHANGELOG.md  Cargo.toml  README.md
crates/client_core/src/: array_iterator.rs  domain.rs
crates/client_sync/: CHANGELOG.md  Cargo.toml  README.md
crates/client_sync/src/: lib.rs  private.rs
crates/cornucopi/: CHANGELOG.md  Cargo.toml
crates/cornucopi/src/: cli.rs  codegen.rs  conn.rs  container.rs  error.rs  lib.rs  main.rs  parser.rs  prepare_queries.rs  read_queries.rs  type_registrar.rs  validation.rs
examples/auto_build/: Cargo.toml  _build.rs
examples/auto_build/src/: cornucopi.rs  main.rs
examples/basic_async/: Cargo.toml  README.md
examples/basic_async/src/: cornucopi.rs  main.rs
examples/basic_sync/: Cargo.toml  README.md
examples/basic_sync/src/: cornucopi.rs  main.rs
test_codegen/: Cargo.toml
test_codegen/src/: cornucopi.rs  main.rs
test_integration/: Cargo.toml  README.md
test_integration/fixtures/codegen/: benchmarks.toml  test_codegen.toml
test_integration/src/: codegen.rs  errors.rs  fixtures.rs  main.rs
