[package]
name = "benches"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Path dependencies
cornucopi = { path = "../crates/cornucopi" }
cornucopi_sync = { path = "../crates/client_sync" }
cornucopi_async = { path = "../crates/client_async" }

# benchmarking
criterion = { version = "0.5.1", features = ["html_reports"] }

# async
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"

# rust-postgres interaction
postgres = "0.19.9"
tokio-postgres = "0.7.12"
postgres-types = "0.2.8"

# diesel
diesel = { version = "2.2.6", features = ["postgres"] }

[[bench]]
name = "execution"
harness = false
path = "execution/main.rs"

[[bench]]
name = "codegen"
harness = false
path = "codegen.rs"
