[package]
name = "cornucopi_async"
version = "0.7.2"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Asynchronous client library for Cornucopi users."
homepage = "https://cornucopi-rs.netlify.app/"
repository = "https://github.com/jacobsvante/cornucopi"
readme = "README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]

[features]
default = ["deadpool"]
deadpool = ["dep:deadpool-postgres"]
with-serde_json-1 = ["cornucopi_client_core/with-serde_json-1"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Path dependencies
cornucopi_client_core = { path = "../client_core", version = "0.4.2" }

# async
async-trait = "0.1.85"

# rust-postgres interaction
tokio-postgres = "0.7.12"

# connection pooling
deadpool-postgres = { version = "0.14.1", optional = true }
