[package]
name = "cornucopi"
version = "0.9.2"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Generate type-checked Rust from your PostgreSQL queries."
homepage = "https://cornucopi-rs.netlify.app/"
repository = "https://github.com/jacobsvante/cornucopi"
readme = "../../README.md"
categories = ["database"]
keywords = ["postgresql", "query", "generator", "sql", "tokio-postgres"]

[dependencies]
# Path dependencies
codegen_template = { path = "../codegen_template", version = "0.1.0" }

# Postgres interaction
postgres = "0.19.9"
postgres-types = "0.2.8"

# Error handling and reporting
thiserror = "2.0.9"
miette = { version = "7.4.0", features = ["fancy"] }

# Parser
chumsky = "0.9.3"

# CLI handling
clap = { version = "4.5.24", features = ["derive"] }

# Word case
heck = "0.5.0"

# Order-preserving map to work around borrowing issues
indexmap = "2.7.0"
