[package]
name = "auto-build"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cornucopi async client
## If you're trying this example as a standalone crate,
## replace the path with the latest current version
cornucopi_async = { path = "../../crates/client_async" }

# Async
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"

# Postgres interaction
tokio-postgres = "0.7.12"
postgres-types = "0.2.8"
## Connection pooling
deadpool-postgres = "0.14.1"

[build-dependencies]
# Cornucopi library to automatically
## If you're trying this example as a standalone crate,
## replace the path with the latest current version
cornucopi = { path = "../../crates/cornucopi" }
